Import of XANT/Shardcache-Client-Fast-0.02 from CPAN.
gitpan-cpan-distribution: Shardcache-Client-Fast
gitpan-cpan-version:      0.02
gitpan-cpan-path:         XANT/Shardcache-Client-Fast-0.02.tar.gz
gitpan-cpan-author:       XANT
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,10 @@
 --- #YAML:1.0
 name:               Shardcache-Client-Fast
-version:            0.01
+version:            0.02
 abstract:           Perl extension for the client part of libshardcache
 author:
     - xant <xant@macports.org>
-license:            unknown
+license:            perl
 distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
