Import of XANT/Shardcache-Client-Fast-0.17 from CPAN.
gitpan-cpan-distribution: Shardcache-Client-Fast
gitpan-cpan-version:      0.17
gitpan-cpan-path:         XANT/Shardcache-Client-Fast-0.17.tar.gz
gitpan-cpan-author:       XANT
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,21 @@
----
-abstract: 'Perl extension for the client part of libshardcache'
+--- #YAML:1.0
+name:               Shardcache-Client-Fast
+version:            0.17
+abstract:           Perl extension for the client part of libshardcache
 author:
-  - 'xant <xant@macports.org>'
-build_requires:
-  ExtUtils::MakeMaker: 0
+    - xant <xant@macports.org>
+license:            perl
+distribution_type:  module
 configure_requires:
-  ExtUtils::MakeMaker: 0
-dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
-license: perl
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
-name: Shardcache-Client-Fast
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:  {}
 no_index:
-  directory:
-    - t
-    - inc
-requires: {}
-version: 0.16
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.57_05
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
